# adw-showcase-todo

./: .env.sample  .gitignore  DEMO_ISSUE.md  README.md  pyproject.toml
.claude/commands/: document.md  review.md
.claude/hooks/utils/llm/: oai.py
adws/: adw_document.py  adw_plan_build_test_review_document.py  adw_review.py  adw_test.py
adws/adw_modules/: agent.py  utils.py
tests/: test_todo.py
todo/: __init__.py  cli.py
